@@ -1,3 +1,9 @@
+2007-02-09  Zack Weinberg  <zackw@panix.com>
+
+	* cmd_files.cc (cat, automate get_file_of): Fail gracefully in a
+	two-parent workspace, unless given -r.
+	* tests/two_parent_workspace_commands_that_fail: Test them.
+
 2007-02-09  Matthew Gregan  <kinetik@orcon.net.nz>
 
 	* work.cc (maybe_update_inodeprints): Update for multi-parent
